IF-483 fixed visibility of item options menu

--- a/fusionfrontend/src/app/fusion-applets/components/fusion-applets-list/fusion-applets-list.component.scss
+++ b/fusionfrontend/src/app/fusion-applets/components/fusion-applets-list/fusion-applets-list.component.scss
@@ -62,3 +62,13 @@
 :host ::ng-deep .fusion-applet > .p-selectbutton {
   width: 9.7rem !important;
 }
+
+:host ::ng-deep .column-visibility {
+  visibility: hidden;
+}
+
+#rowElement:hover {
+  .column-visibility {
+    visibility: visible;
+  }
+}
